# enforce-ascii

./: .bumpversion.cfg  .editorconfig  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGELOG.md  Makefile  README.md  noxfile.py  pyproject.toml
changes/: _4uc307aog.feature.md  _9DLY1rScH.fix.md  _XmQDTr7yJ.change.md  _bMBtJJLoo.fix.md  _m5NXgOKj5.feature.md  _zfUtocONU.fix.md  template.j2
src/enforce_ascii/: __init__.py  __main__.py  cli.py  utils.py
tests/: conftest.py  pytest.ini  test_cli.py  test_version.py
tests/files/bad/: ascii.txt  special.txt  umlaut.txt
tests/files/good/: ascii.txt
